# app

./: .gitignore  README.md  main.py  pyproject.toml
control/: create_evaluation.py  delete_evaluation.py  get_evaluation_report.py  run_evaluation.py  select_evaluation.py
database/: db.py
domain/: evaluation.py
persistence/: eval_finder.py  eval_gateway.py
ui/: evaluation_ui.py
util/: singleton.py  translation_manager.py
